--- a/package.json
+++ b/package.json
@@ -16,45 +16,7 @@
     "e2e": "gulp serve webdriver-standalone e2e"
   },
   "devDependencies": {
-    "aurelia-bundler": "^0.3.0",
-    "aurelia-tools": "^0.1.18",
-    "babel-eslint": "^5.0.0",
-    "babel-plugin-syntax-flow": "^6.5.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "browser-sync": "^2.10.0",
-    "conventional-changelog": "0.0.11",
-    "del": "^1.1.0",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
-    "gulp-changed": "^1.1.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-protractor": "1.0.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "isparta": "^3.1.0",
-    "istanbul": "^0.3.13",
-    "jasmine-core": "^2.1.3",
-    "jspm": "0.16.15",
-    "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.5",
-    "karma-jspm": "2.0.1-beta.2",
-    "object.assign": "^1.0.3",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.2",
-    "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1"
+
   },
   "jspm": {
     "dependencies": {
@@ -76,7 +38,47 @@
       "font-awesome": "npm:font-awesome@^4.5.0",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
-    "devDependencies": {}
+    "devDependencies": {
+      "aurelia-bundler": "^0.3.0",
+      "aurelia-tools": "^0.1.18",
+      "babel-eslint": "^5.0.0",
+      "babel-plugin-syntax-flow": "^6.5.0",
+      "babel-plugin-transform-decorators-legacy": "^1.3.4",
+      "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
+      "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
+      "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
+      "babel-plugin-transform-flow-strip-types": "^6.7.0",
+      "babel-preset-es2015": "^6.6.0",
+      "babel-preset-es2015-loose": "^7.0.0",
+      "babel-preset-stage-1": "^6.5.0",
+      "browser-sync": "^2.10.0",
+      "conventional-changelog": "0.0.11",
+      "del": "^1.1.0",
+      "gulp": "^3.8.10",
+      "gulp-babel": "^6.1.2",
+      "gulp-bump": "^0.3.1",
+      "gulp-changed": "^1.1.0",
+      "gulp-eslint": "^1.0.0",
+      "gulp-notify": "^2.2.0",
+      "gulp-plumber": "^1.0.1",
+      "gulp-protractor": "1.0.0",
+      "gulp-sourcemaps": "^1.3.0",
+      "isparta": "^3.1.0",
+      "istanbul": "^0.3.13",
+      "jasmine-core": "^2.1.3",
+      "jspm": "0.16.15",
+      "karma": "^0.13.15",
+      "karma-babel-preprocessor": "^6.0.1",
+      "karma-chrome-launcher": "^0.2.1",
+      "karma-coverage": "^0.5.3",
+      "karma-jasmine": "^0.3.5",
+      "karma-jspm": "2.0.1-beta.2",
+      "object.assign": "^1.0.3",
+      "require-dir": "^0.1.0",
+      "run-sequence": "^1.0.2",
+      "vinyl-paths": "^1.0.0",
+      "yargs": "^2.1.1"
+    }
   },
   "directories": {
     "doc": "doc",
