--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-jspm": "2.0.1-beta.2",
     "object.assign": "^1.0.3",
+    "proxy-middleware": "^0.15.0",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "vinyl-paths": "^1.0.0",
@@ -67,6 +68,7 @@
     },
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.2",
+      "aurelia-auth": "npm:aurelia-auth@^2.1.3",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.4",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.4",
