--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-sync": "^2.10.0",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
+    "express": "^4.13.4",
     "gulp": "^3.8.10",
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.3.1",
